fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@
   left: 260px;
   width: calc(100% - 260px);
   transition: all 0.5s ease;
-  z-index: 2;
+  /* z-index: 1; */
 }
 .sidebar.close ~ .home-section {
   left: 78px;
